Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5797

QtCreator > Project Mode > Harmattan Run > Package version does not work correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.3.1
    • Qt Creator 2.3.0
    • Remote Linux
    • None
    • Ubuntu 11.04 32-bit
    • 51d0e389511f275630a5b3ac85eae47a0f4cfb70

    Description

      SOFTWARE VERSION:
      Qt Creator 2.2.84
      Based on Qt 4.7.4 (32 bit)
      Built on Aug 10 2011 at 08:46:18
      From revision fb550c4ff1

      PRECONDITIONS:
      Updating a previously debianized project.

      STEPS LEADING TO PROBLEM:
      1. Change to Project mode
      2. Change to Harmattan target
      3. Select Run Settings
      4. Adjust patch version of the package

      EXPECTED OUTCOME:
      A new changelog entry would be added.

      ACTUAL OUTCOME:
      Editing the version will change all version numbers in changelog of every
      entry.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            juhapekka.piiroinen Juhapekka Piiroinen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes