Harmattan: Fix package version updates.

Obviously, we can't just globally replace all version numbers. Instead,
we now duplicate the latest entry and replace version number, date and
comments. Also implemented is a simple check guarding against
downgrading, which just checks whether the "new" version number already
appears in the changlog file.

Task-number: https://bugreports.qt.nokia.com/browse/QTCREATORBUG-5797
Change-Id: I17512169972415f60d1a9715ac8b98d185da8694
Reviewed-on: http://codereview.qt.nokia.com/4209
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>